5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1760_1577.log
== TEST (2019-05-24 15:30:28) 
-- CODE:
from numpy import *
a=float(input("aceleração: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
p=(a*t**2/2)+vi*t
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:31:24) 
-- CODE:
from numpy import *
a=float(input("aceleração: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)

print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:31:57) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)

print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:32:12) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
p=(a*t**2/2)+vi*t
print(t)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 15:33:48) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)

print(t)
print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:00:36) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<size(n)):
	d[i]=a*t**2/2)+vi*t+d[i]
	i=i+1

print(d)

-- ERROR:
File "XXXX", line 11
    d[i]=a*t**2/2)+vi*t+d[i]
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:00:50) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<size(n)):
	d[i]=(a*t**2/2)+vi*t+d[i]
	i=i+1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:01:51) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<size(n)):
	d[i]=((a*t**2/2)+vi*t)+d[i]
	i=i+1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:05:23) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<size("n")):
	d[i]=((a*t**2/2)+vi*t)+d[i]
	i=i+1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:10:10) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<size(n)):
	d[i]=((a*t**2/2)+vi*t)+d[i]
	i=i+1

print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:11:44) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0


print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:04) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros[n]
s=((a*t**2/2)+vi*t)
i=0



print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:18:20) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros[n]
s=((a*t**2/2)+vi*t)
i=0



print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:19:00) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0



print(d)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:07:57) 
-- CODE:
from numpy import *
a=float(input("aceleracao: "))
vi=float(input("velocidade inicial: "))
n=array(eval(input("numero inteiro: ")))
t=arange(n)
d=zeros(n)
s=((a*t**2/2)+vi*t)
i=0

while(i<n):
	dt=(a*t[i]**2/2)+vi*t[i]
	d[i]=dt
	i=i+1
print(d)

-- EXECUTION TIME:
0.601094
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
